--- a/Development/UID2GoogleIMADevelopmentApp/UID2GoogleIMADevelopmentApp/Info.plist
+++ b/Development/UID2GoogleIMADevelopmentApp/UID2GoogleIMADevelopmentApp/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSMainNibFile~ipad</key>
+	<key>UIMainStoryboardFile~ipad</key>
 	<string>iPad</string>
-	<key>UIMainStoryboardFile~iphone</key>
+	<key>UIMainStoryboardFile</key>
 	<string>iPhone</string>
 </dict>
 </plist>
