--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -8,7 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
   swift-code-checks:
     name: Code Tests
     runs-on: macos-latest
@@ -24,3 +23,10 @@ jobs:
 
       - name: Run unit tests
         run: xcodebuild test -scheme UID2IMAPluginTests -sdk iphonesimulator16.2 -destination "OS=16.2,name=iPhone 14"
+
+      - name: Vulnerability Scan
+        uses: IABTechLab/uid2-shared-actions/actions/vulnerability_scan_filesystem@v2
+        with:
+          scan_severity: HIGH,CRITICAL
+          failure_severity: CRITICAL,HIGH
+          publish_vulnerabilities: true
