--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -10,19 +10,28 @@ on:
 jobs:
   swift-code-checks:
     name: Code Tests
-    runs-on: macos-12
+    runs-on: macos-14
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: brew install swiftlint
 
       - name: Lint code
         run: swiftlint lint --config .swiftlint.yml --reporter github-actions-logging
 
+      - name: Select Xcode 15.3
+        run: sudo xcode-select -s /Applications/Xcode_15.3.app
+
       - name: Build
-        run: xcodebuild -scheme UID2IMAPlugin -sdk iphonesimulator16.2 -destination "OS=16.2,name=iPhone 14"
+        run: xcodebuild -scheme UID2IMAPlugin -destination "generic/platform=iOS"
 
       - name: Run unit tests
-        run: xcodebuild test -scheme UID2IMAPluginTests -sdk iphonesimulator16.2 -destination "OS=16.2,name=iPhone 14"
+        run: xcodebuild test -scheme UID2IMAPluginTests -sdk iphonesimulator17.4 -destination "OS=17.4,name=iPhone 15"
+
+      - name: Lint pod spec
+        run: pod lib lint --verbose
 
   vulnerability-scan:
       name: Vulnerability Scan
