--- a/Development/UID2GoogleIMADevelopmentApp/UID2GoogleIMADevelopmentApp/Info.plist
+++ b/Development/UID2GoogleIMADevelopmentApp/UID2GoogleIMADevelopmentApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UID2EnvironmentEUID</key>
+	<false/>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>iPad</string>
 	<key>UIMainStoryboardFile</key>
