--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -21,14 +21,14 @@ jobs:
       - name: Lint code
         run: swiftlint lint --config .swiftlint.yml --reporter github-actions-logging
 
-      - name: Select Xcode 15.3
-        run: sudo xcode-select -s /Applications/Xcode_15.3.app
+      - name: Select Xcode 16.2
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app
 
       - name: Build
         run: xcodebuild -scheme UID2IMAPlugin -destination "generic/platform=iOS"
 
       - name: Run unit tests
-        run: xcodebuild test -scheme UID2IMAPluginTests -sdk iphonesimulator17.4 -destination "OS=17.4,name=iPhone 15"
+        run: xcodebuild test -scheme UID2IMAPluginTests -destination "OS=18.2,name=iPhone 16"
 
       - name: Lint pod spec
         run: pod lib lint --verbose
